# hrf-compare-pybids-nilearn

./: .gitignore  README.md  pyproject.toml
code/: check_gamma_function_differences.ipynb  collect_functions.ipynb  nilearn_hrf_functions.py  pybids_hrf_functions.py  regressor_comparison_nilearn_pybids.ipynb
comparison_report_md/: comparing_hrf_functions.md
test_model_spec/code/: check_fir_breakpoints.py  check_fir_transformations.ipynb  fir_tuple.pkl
test_model_spec/model_spec/: fir_model_spec.json
