[project]
name = "hrf-compare-pybids-nilearn"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.3.2",
    "nilearn @ git+https://github.com/nilearn/nilearn.git@3f63773",
    "pybids @ git+https://github.com/bids-standard/pybids.git@6106eea",
    "ipykernel>=6.30.1",
    "matplotlib>=3.10.5",
]

[tool.ruff]
extend-include = ["*.ipynb"]

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint]
extend-select = ["E501", "W", "N", "R", "I"]
